[package]
name = "msg_chain"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0.64"

msg_chain_derive={path="./msg_chain_derive/"}
from_chain_derive={path="./from_chain_derive"}